lighttpd: prefer lighttpd defaults
prefer lighttpd defaults, including preferring sendfile over writev
(might make a difference for non-TLS sockets)

--- a/buildroot-external/overlay/base/etc/lighttpd/lighttpd.conf
+++ b/buildroot-external/overlay/base/etc/lighttpd/lighttpd.conf
@@ -191,7 +191,7 @@ include "conf.d/debug.conf"
 ##
 ## linux-sysepoll is recommended on kernel 2.6.
 ##
-server.event-handler = "linux-sysepoll"
+#server.event-handler = "linux-sysepoll"
 
 ##
 ## The basic network interface for all platforms at the syscalls read()
@@ -201,7 +201,7 @@ server.event-handler = "linux-sysepoll"
 ## linux-sendfile - is recommended for small files.
 ## writev         - is recommended for sending many large files
 ##
-server.network-backend = "writev"
+#server.network-backend = "writev"
 
 ##
 ## As lighttpd is a single-threaded server, its main resource limit is
@@ -227,7 +227,7 @@ server.max-fds = 2048
 ## possible values are:
 ## disable, simple or fam.
 ##
-server.stat-cache-engine = "simple"
+#server.stat-cache-engine = "simple"
 
 ##
 ## Fine tuning for the request handling
@@ -411,7 +411,7 @@ include "conf.d/dirlisting.conf"
 ##
 ## Should lighttpd follow symlinks?
 ## 
-server.follow-symlink = "enable"
+#server.follow-symlink = "enable"
 
 ##
 ## force all filenames to be lowercase?
